syntax = "proto3";
option csharp_namespace = "QbservableProvider.Core.GRpcProvider";

package Greet;

service StreamService {
  rpc QueryStreamAsync (QueryEnvelope) returns (stream EventEnvelope);
}

message QueryEnvelope {
  string payload = 1;
}

message EventEnvelope {
  string payload = 1;
}
